main/style.css
/* ... */
.item-nav1 {
    align-items: center;
}


/* nav ===========================================================*/

.intro {
    text-align: left;
    display: flex;
    align-items: center;
    justify-content: center;

}

/* .intro p{

} */

/* name-intro */
#intro1 {
    /* text-align: center; */
    padding-bottom: 5px;
}

#myname,
button.collapsible.active {
    background-color: rgba(255, 255, 255, 0) !important;
    text-align: center;
}

#intro2 {
    padding: 30px 35px 0px;
    color: rgb(121, 121, 121);
}

.collapsible:hover {
    color: rgb(100, 100, 100);
}

/* name-intro ====================================================*/

/* css for the collapsible content for the about section */
.collapsible {
    background-color: #ffffff;
    color: rgb(0, 0, 0);
    cursor: pointer;
    /* padding: 18px; */
    /* width: 100%; */
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
    /* margin-top: 20px; */
    /* margin-bottom:20px; */
}

.active,
.collapsible:hover {
    background-color: #ffffff;
}

.collapsible:after {
    /* content: '\02795'; Unicode character for "plus" sign (+) */
    font-size: 13px;
    color: white;
    /* float: right;
    margin-left: 5px; */
}

/* container of the collapsible */
.container-about {
    text-align: center;
}

/* content inside the collapsible */
.about-collapsible {
    padding: 40px;
    background-color: rgb(243, 243, 243);
    box-shadow: 0 0 50px rgba(0, 0, 0, 0.150);
    color: rgb(0, 0, 0);
    /* overflow: hidden; */
    display: none;
}

/* .content {
    padding: 0 18px;
    overflow: hidden;
    background-color: white;
    max-height: 0;
    background-color: #f1f1f1;
    transition: max-height 0.2s ease-out;
  } */

/* this is body container */
/* .container{
    display: grid;
    text-align: center;
} */

/* .about-content.grid-layout {
    display: grid;
    gap: 5px;
} */

.item-content {
    /* background-color: rgb(233, 233, 233); */
    padding: 5px;
    /* text-align: center; */
    /* min-width: 15vw; */
    /* height: 60vh; */
}

.itemcontent1 {
    grid-column-start: 1;
    grid-row-start: 1;
}

.itemcontent2 {
    grid-column-start: 2;
    grid-row-start: 1;

}

.itemcontent2 p {
    text-align: center;
    padding: 0px 40px;
}

.about-content h2,
.about-content p {
    text-align: center !important;
}

/* main content here ==========================================================*/
/* .container-roles.grid-layout {
    margin-top: 30px;
    display: grid;
    gap: 10px;
}

.item-role {
    background-color: #f0f0f0;
    padding: 20px;
    text-align: center;
    height: 60vh;
} */

/* Default state: only the collapsed part is visible */

.container-title {
    text-align: center;
}

.section-grid {
    display: grid;

}

.active-section {
    font-weight: 700;
    color: #4d4d4d;
}

.section-project_overview {
    position: sticky;
    top: 0;
    margin-top: 60px;

    grid-column-start: 1;
    grid-row-start: 1;

    z-index: 1000;

}

.section-project_overview p {
    top: 200px;
    margin-bottom: 20px;
    font-weight: 600;
    text-transform: uppercase;
}

.section-project_overview ol {
    top: 240px;
    margin: 0;
    padding: 0;
    /* padding-top: 10px; */
    list-style-type: none;
    /* display: grid; */
}

.section-project_overview p,
ol {
    display: grid;
    position: sticky;
    color: #717171;
}

.section-project_overview li {
    padding-top: 2px !important;
}

.section-project_overview a {
    color: #4d4d4d;
}

.section-project_overview a:hover {
    color: #4d4d4d;
    text-transform: none;
}

.section-project_detail {
    grid-column-start: 2;
    grid-row-start: 1;
}

.image-heading {
    margin: 40px 40px 0px;
    text-align: center;

}

.image-heading img {

    @media only screen and (max-width: 600px) {
        width: 100% !important;
    }
}


.image-heading-smaller {
    margin: 20px 20px 0px;
    text-align: center;
}

.image-heading,
.image-heading-smaller img {
    max-width: 100%;
    height: auto;
    width: auto\9;
    /* ie8 */
}

.side-scroll-container {
    max-width: 100%;
    width: 1000px;
    /* Default width */
    height: auto;
    overflow-x: auto;
    /* Enables horizontal scrolling */
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
}

.side-scroll-container img {
    width: auto;
    /* Keeps original width */
    height: 100%;
    /* Ensures it scales proportionally */
    flex-shrink: 0;
    /* Prevents compression */
}


.slideshow-container {
    max-width: 1000px;
    position: relative;
    margin: auto;
}

.mySlides {
    display: none;
}

.dot1 {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transform: translate(0%, -200%);
    transition: background-color 0.6s ease;
}

.item-expanded {
    display: none;
    /* Ensures expanded content is hidden by default */
    margin-top: 20px;

}

.close-button {
    display: none;
    position: absolute;
    top: 10px;
    right: 30px;
    padding: 5px 10px;
    font-size: 40px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    text-align: center;
}

.close-about {
    position: absolute;
    top: 165px;
    right: 30px;
    padding: 5px 10px;
    font-size: 40px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    text-align: center;
}

/* .close-about {
    position: relative;
    bottom: 0;
    padding: 5px 15px;
    font-size: 40px;
    border: none;
    border-radius: 30px;
    background-color: #ebebeb;
    cursor: pointer;
    text-align: center;

} */

.item-collapsed {
    padding: none;
    margin: none;
    margin-bottom: -50px;
    background-color: white;
    /* height: 60vh; */
}

.item-collapsed img {
    @media only screen and (max-width: 1150px) {
        height: auto;
        width: 25%;
    }
}
/* ... */

